Lots of new features, mostly centerd on user login

--- a/example/secret_config.json
+++ b/example/secret_config.json
@@ -1,5 +1,7 @@
 {
     "database": {
+        "address": "localhost",
+        "name": "blog",
         "user": "dbuser",
         "pass": "dbpass"
     },
