Add SQL init script; write proper README

--- a/res/topaz_config.json
+++ b/res/topaz_config.json
@@ -18,7 +18,7 @@
     },
     "contact_email": "contact@example.com",
     "contact_email_text": "Email Me",
-    "github_url": "https://github.com/caseif/caseif.blog",
+    "github_url": "https://github.com/caseif/Topaz",
     "navbar_links": [
         {
             "type": "icon",
