Restructure config into sections

--- a/res/topaz_config.json
+++ b/res/topaz_config.json
@@ -5,45 +5,51 @@
         "user": "dbuser",
         "password": "dbpass"
     },
-    "admin_ticket": "changeme",
-    "open_registration": false,
-    "show_login_links": true,
-    "allow_read_by_default": true,
-    "site_title": "My Blog",
-    "site_header": "My Blog",
-    "home_recent_post_count": 5,
-    "sidebar_recent_post_count": 5,
-    "post_preview_chars": 600,
-    "copyright": {
-        "name": "John Smith",
-        "start_year": "2021",
-        "end_year": null
+    "user_permissions": {
+        "admin_ticket": "changeme",
+        "open_registration": false,
+        "show_login_links": true,
+        "allow_read_by_default": true
     },
-    "contact_email": "contact@example.com",
-    "contact_email_text": "Email Me",
-    "github_url": "https://github.com/caseif/Topaz",
-    "navbar_links": [
-        {
-            "type": "icon",
-            "icon_namespace": "fab",
-            "icon_id": "twitter",
-            "title_text": "Twitter",
-            "url": "https://twitter.com/jack",
-            "new_tab": true
+    "content": {
+        "site_title": "My Blog",
+        "site_header": "My Blog",
+        "copyright": {
+            "name": "John Smith",
+            "start_year": "2021",
+            "end_year": null
         },
-        {
-            "type": "text",
-            "text": "About",
-            "title_text": "About Me",
-            "url": "/about.php"
-        }
-    ],
-    "external_links": [
-        {
-            "text": "GitHub",
-            "title_text": "My GitHub Profile",
-            "url": "https://github.com/github",
-            "new_tab": true
-        }
-    ]
+        "contact_email": "contact@example.com",
+        "contact_email_text": "Email Me",
+        "github_url": "https://github.com/caseif/Topaz",
+        "navbar_links": [
+            {
+                "type": "icon",
+                "icon_namespace": "fab",
+                "icon_id": "twitter",
+                "title_text": "Twitter",
+                "url": "https://twitter.com/jack",
+                "new_tab": true
+            },
+            {
+                "type": "text",
+                "text": "About",
+                "title_text": "About Me",
+                "url": "/about.php"
+            }
+        ],
+        "external_links": [
+            {
+                "text": "GitHub",
+                "title_text": "My GitHub Profile",
+                "url": "https://github.com/github",
+                "new_tab": true
+            }
+        ]
+    },
+    "display": {
+        "home_recent_post_count": 5,
+        "sidebar_recent_post_count": 5,
+        "post_preview_chars": 600
+    }
 }
