Move content pages into separate subdirectory:

--- a/res/topaz_config.json
+++ b/res/topaz_config.json
@@ -38,7 +38,7 @@
                 "type": "text",
                 "text": "About",
                 "title_text": "About Me",
-                "url": "/about.php"
+                "url": "/content/about.php"
             }
         ],
         "external_links": [
